# roboveda

./: .gitignore  CNAME  README.md  package-lock.json
.github/workflows/: azure-static-web-apps-happy-beach-0117a1f00.yml
backend/: .env  Cargo.toml
backend/migrations/: 20231218000001_initial_schema.sql
backend/src/: main.rs
backend/src/config/: env.rs  mod.rs
backend/src/controllers/: auth_ctrl.rs  mod.rs
backend/src/models/: device.rs  mod.rs  transaction.rs  user.rs
backend/src/routes/: ai.rs  auth.rs  blockchain.rs  dashboard.rs  mod.rs  robotics.rs
backend/src/services/: ai_services.rs  crypto_services.rs  mod.rs  robotics_services.rs
backend/src/utils/: jwt.rs  mod.rs  verification.rs
frontend/: .env  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.tsx  Login.tsx  SignUp.tsx  index.css  main.jsx
frontend/src/components/layout/: DashboardLayout.jsx  Footer.jsx  Navbar.jsx
frontend/src/components/ui/: Button.jsx  Spinner.jsx
frontend/src/config/: env.js
frontend/src/context/: AuthContext.jsx  AuthContext.tsx  Web3Context.jsx  Web3Context.tsx
frontend/src/pages/: About.tsx  Footer.tsx  Navbar.tsx
frontend/src/pages/AI-Labs/: AILabs.jsx
frontend/src/pages/About/: About.jsx
frontend/src/pages/Auth/: Login.jsx  Register.jsx  VerifyEmail.jsx
frontend/src/pages/Blockchain/: Blockchain.jsx
frontend/src/pages/Dashboard/: Dashboard.jsx  Dashboard.tsx
frontend/src/pages/DevPortal/: DevPortal.jsx
frontend/src/services/: api.js  blockchain.js
frontend/src/styles/: globals.css  theme.css
(+6 files in other folders)
