[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]

# Web Framework
actix-web = "4.9"
actix-cors = "0.7"
actix-rt = "2.10"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "migrate", "uuid", "chrono"] }
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security & Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"
argon2 = "0.5"
sha2 = "0.10"
blake3 = "1.5"
rsa = "0.9"
rand = "0.8"

# Environment & Config
dotenv = "0.15"
config = "0.14"

# Logging
env_logger = "0.11"
log = "0.4"

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID & DateTime
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Web3 & Blockchain
web3 = "0.19"
ethers = "2.0"

# Payment Integration (Stripe/Razorpay for India)
# Temporarily disabled: causes yanked transitive dependency during build
# stripe-rust = "0.12"

# Rate Limiting
actix-governor = "0.6"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"